--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,9 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ng-view></div>
-
-    <div>Angular seed app: v<span app-version></span></div>
+    <div class="container">
+        <div ng-view></div>
+    </div>
 
     <!-- In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
@@ -33,11 +33,9 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
-    <script src="components/version/version.js"></script>
-    <script src="components/version/version-directive.js"></script>
-    <script src="components/version/interpolate-filter.js"></script>
     <script src="modules/hotels/hotels.js"></script>
-    <script src="modules/hotels/components/hotels-component.js"></script>
-    <script src="modules/hotels/components/hotel-component.js"></script>
+    <script src="modules/hotels/components/hotels.component.js"></script>
+    <script src="modules/hotels/components/hotel.component.js"></script>
+    <script src="modules/hotels/components/hotel-rating.component.js"></script>
 </body>
 </html>
