--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <title>Kaligo Hotels</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
@@ -16,15 +17,25 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/popper.js/dist/umd/popper.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/lodash/dist/lodash.js"></script>
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body>
+<body ng-controller="RootController as $rootCtrl">
     <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="container">
-        <div ng-view></div>
+    <app-header></app-header>
+
+    <div class="container-fluid">
+        <div class="row flex-xl-nowrap">
+            <div class="col-12 col-md-3 col-xl-2 bd-sidebar">
+                <app-sidebar on-hotel-name-search="$rootCtrl.onHotelNameSearch"></app-sidebar>
+            </div>
+
+            <div ng-view></div>
+
+        </div>
     </div>
 
     <!-- In production use:
@@ -33,9 +44,17 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="app.js"></script>
+
+    <script src="modules/header/header.js"></script>
+    <script src="modules/header/brand-header/brand-header.component.js"></script>
+
+    <script src="modules/sidebar/sidebar.js"></script>
+    <script src="modules/sidebar/hotel-search/hotel-search.component.js"></script>
+
     <script src="modules/hotels/hotels.js"></script>
-    <script src="modules/hotels/components/hotels.component.js"></script>
-    <script src="modules/hotels/components/hotel.component.js"></script>
-    <script src="modules/hotels/components/hotel-rating.component.js"></script>
+    <script src="modules/hotels/hotels-component/hotels.component.js"></script>
+    <script src="modules/hotels/hotel-component/hotel.component.js"></script>
+    <script src="modules/hotels/hotel-rating/hotel-rating.component.js"></script>
+    <script src="modules/hotels/hotel-trustyou/hotel-trustyou.component.js"></script>
 </body>
 </html>
