--- a/app/modules/sidebar/sidebar.html
+++ b/app/modules/sidebar/sidebar.html
@@ -1,1 +1,4 @@
 <hotel-search-component on-input-change="$ctrl.onHotelNameSearch(searchTerm)"></hotel-search-component>
+<hotel-sort-component on-select-change="$ctrl.onHotelSort(sortValue)"></hotel-sort-component>
+
+<filter-trustyou-component></filter-trustyou-component>
